# Conway-s-Game-of-Life

./: CMakeLists.txt  README.md
src/: game.c  game.h  main.c
